hphp/test/zend/good/ext/intl/tests/bug60192-getsortkey.php.expectf

Catchable fatal error: Collator not initialized in %s/bug60192-getsortkey.php on line 10
